# ro-control

./: .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  README.tr.md  SECURITY.md  yapilacak.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml  release.yml  security.yml  tests.yml
data/: io.github.AcikKaynakGelistirmeToplulugu.ro-control.metainfo.xml  ro-control.metainfo.xml
docs/: ARCHITECTURE.md  BUILDING.md  DESIGN_BRIEF.md  VERSIONS.md
linux-gpu-manager/: .gitattributes  .gitignore
linux-gpu-manager/data/: driver-pilot.desktop  driver-pilot.metainfo.xml  ro-control-root-task  ro-control.desktop
linux-gpu-manager/src/: config.py
linux-gpu-manager/src/core/: detector.py  installer.py  repo_manager.py  tweaks.py  updater.py
linux-gpu-manager/src/ui/: main_window.py  performance_view.py
linux-gpu-manager/src/utils/: command_runner.py  logger.py  reporter.py  translator.py
linux-gpu-manager/tools/: build_deb.py  build_docker.sh
packaging/rpm/: ro-control.spec
scripts/: ro-control-root-task
src/: bridge.rs  config.py  config.rs  main.py  main.rs
src/core/: detector.rs  distro_mgr.py  installer.py  repo_manager.py  tweaks.py  updater.py  updater.rs
src/qml/: Main.qml  Theme.qml
src/qml/components/: ActionCard.qml  StatRow.qml  StepItem.qml  (+1 more)
src/ui/: main_window.py  performance_view.py  progress_controller.py
src/utils/: command_runner.py  dependency_manager.py  i18n.rs  logger.rs  reporter.py  translator.py
tests/: test_detector.py
tools/: build_deb.py
(+17 files in other folders)
